-. DataSources#getHikariDataSource 메소드 추가. -. JPA 용 Spring Configuration에 Hikari CP를 사용하는 Configuration 추가.

--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
