--- a/pom.xml
+++ b/pom.xml
@@ -651,6 +651,14 @@
                 <scope>test</scope>
             </dependency>
 
+            <dependency>
+                <groupId>postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>9.1-901.jdbc4</version>
+                <scope>test</scope>
+            </dependency>
+
+
             <!-- Servlet -->
             <dependency>
                 <groupId>javax</groupId>
