-. Hikari CP 사용 테스트 추가.

--- a/debop4s-data/src/test/resources/hikari.properties
+++ b/debop4s-data/src/test/resources/hikari.properties
@@ -1,13 +1,14 @@
 
-acquireIncrement=4
+acquireIncrement=8
 acquireRetryDelay=1000
 connectionTestQuery=SELECT 1
+maximumPoolSize=50
 dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
 dataSource.user=root
 dataSource.password=root
 dataSource.databaseName=test
 dataSource.serverName=localhost
 
-# for UTF-8
+# use UTF-8 in MySQL
 dataSource.encoding=UTF-8
 dataSource.useUnicode=true
