--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <scala.version>2.10.3</scala.version>
         <scala.main.version>2.10</scala.main.version>
         <akka.version>2.2.3</akka.version>
+        <spray.version>1.2.0</spray.version>
 
         <springframework.version>4.0.2.RELEASE</springframework.version>
         <hibernate.version>4.3.2.Final</hibernate.version>
@@ -626,7 +627,7 @@
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
-                <version>1.3.0</version>
+                <version>1.3.2</version>
             </dependency>
 
             <!-- Database Drivers -->
