-. hibernate 2nd cache for Redis 를 hibernate-rediscala 모듈로 분리 성공.

--- a/debop4s-redis/pom.xml
+++ b/debop4s-redis/pom.xml
@@ -21,11 +21,11 @@
             <artifactId>debop4s-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.github.debop4s</groupId>-->
-            <!--<artifactId>debop4s-timeperiod</artifactId>-->
-            <!--<version>${project.parent.version}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.github.debop4s</groupId>
+            <artifactId>hibernate-rediscala</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
 
         <!-- Akka -->
         <dependency>
