--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -27,6 +27,11 @@
         </dependency>
         <dependency>
             <groupId>com.github.debop4s</groupId>
+            <artifactId>hibernate-rediscala</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.debop4s</groupId>
             <artifactId>debop4s-redis</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
