-. 이상하게 집 컴퓨터에서 버그가 많이 나오는데, 뭔가 엄격하게 그런 것 같네요. -. JodaDateTimeZoneUserType 은 java에서는 잘되는데, scala 코드에서는 예외가 발생해서 date를 long 값으로 저장하도록 변경. -. UUID 는 class 로 표현 시 String 로 표현해야 함.

--- a/pom.xml
+++ b/pom.xml
@@ -815,15 +815,11 @@
                     </testAnalysisCacheFile>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <args>
-                        <!--<arg>-target:jvm-${jdk.version}</arg>-->
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
-                        <arg>-nowarn</arg>
-                        <!--<arg>-explaintypes</arg>-->
+                        <arg>-explaintypes</arg>
                     </args>
                     <javacArgs>
-                        <javacArg>-source</javacArg>
-                        <javacArg>${jdk.version}</javacArg>
                         <javacArg>-target</javacArg>
                         <javacArg>${jdk.version}</javacArg>
                         <javacArg>-Xlint:unchecked</javacArg>
@@ -832,7 +828,7 @@
                     <jvmArgs>
                         <jvmArg>-server</jvmArg>
                         <jvmArg>-Xms128m</jvmArg>
-                        <jvmArg>-Xmx4096m</jvmArg>
+                        <jvmArg>-Xmx8192m</jvmArg>
                     </jvmArgs>
                 </configuration>
                 <executions>
@@ -924,7 +920,7 @@
                 <version>2.15</version>
                 <configuration>
                     <skipTests>true</skipTests>
-                    <argLine>-Xmx4096m</argLine>
+                    <argLine>-Xmx8192m</argLine>
                     <argLine>-XX:+UseCompressedOops</argLine>
                     <argLine>-XX:+UseParallelOldGC</argLine>
                     <argLine>-Dfile.encoding=UTF-8</argLine>
