-. 모든 테스트 완료! 병렬 작업도 성공!

--- a/pom.xml
+++ b/pom.xml
@@ -815,9 +815,11 @@
                     </testAnalysisCacheFile>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <args>
+                        <arg>-target:jvm-${jdk.version}</arg>
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
-                        <arg>-explaintypes</arg>
+                        <!--<arg>-explaintypes</arg>-->
+                        <!--<arg>-nowarn</arg>-->
                     </args>
                     <javacArgs>
                         <javacArg>-target</javacArg>
