--- a/pom.xml
+++ b/pom.xml
@@ -809,7 +809,8 @@
                 <version>3.1.6</version>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
-                    <recompileMode>incremental</recompileMode>
+                    <!-- NOTE: recompileMode 때문에 PermGen 에러가 발생했습니다.!!! -->
+                    <!--<recompileMode>incremental</recompileMode>-->
                     <analysisCacheFile>${project.build.outputDirectory}/analysis-cache-file</analysisCacheFile>
                     <testAnalysisCacheFile>${project.build.testOutputDirectory}/test-analysis-cache-file
                     </testAnalysisCacheFile>
@@ -830,7 +831,7 @@
                     <jvmArgs>
                         <jvmArg>-server</jvmArg>
                         <jvmArg>-Xms128m</jvmArg>
-                        <jvmArg>-Xmx8192m</jvmArg>
+                        <jvmArg>-Xmx512m</jvmArg>
                     </jvmArgs>
                 </configuration>
                 <executions>
