--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github.debop4s</groupId>
     <artifactId>debop4s-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0</version>
+    <version>0.3.0-SNAPSHOT</version>
 
     <modules>
         <module>debop4s-core</module>
