-. 한글 초성 분리 (KoreanString) - 초성으로 검색하기 -. Snappy (구글 압축기) 적용 -. hibernate-redis 에 snappy 적용

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>guava</artifactId>
         </dependency>
 
+        <!-- Snappy-java -->
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+        </dependency>
+
         <!-- 암호화 -->
         <dependency>
             <groupId>org.jasypt</groupId>
