-. scala 전용의 Try, Option 구문 사용하도록 변경. -. hibernate-rediscala 에 MessagePack 을 이용하여 buffering 할 수 있도록 시도 중.

--- a/hibernate-rediscala/pom.xml
+++ b/hibernate-rediscala/pom.xml
@@ -54,6 +54,13 @@
             <artifactId>snappy-java</artifactId>
         </dependency>
 
+        <!-- Message Pack -->
+        <dependency>
+            <groupId>org.msgpack</groupId>
+            <artifactId>msgpack-scala_${scala.main.version}</artifactId>
+            <version>0.6.8</version>
+        </dependency>
+
         <!-- Bone CP -->
         <dependency>
             <groupId>com.jolbox</groupId>
