-. Fast-Serialization 채택 - Snappy 와 결합하니 Java Built In Serializer보다 훨씬 빠르다.

--- a/hibernate-rediscala/pom.xml
+++ b/hibernate-rediscala/pom.xml
@@ -54,11 +54,10 @@
             <artifactId>snappy-java</artifactId>
         </dependency>
 
-        <!-- Message Pack -->
+        <!-- Fast Serialization -->
         <dependency>
-            <groupId>org.msgpack</groupId>
-            <artifactId>msgpack-scala_${scala.main.version}</artifactId>
-            <version>0.6.8</version>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
         </dependency>
 
         <!-- Bone CP -->
