--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>snappy-java</artifactId>
         </dependency>
 
+        <!-- Fast Serialization -->
+        <dependency>
+            <groupId>de.ruedigermoeller</groupId>
+            <artifactId>fst</artifactId>
+        </dependency>
+
         <!-- 암호화 -->
         <dependency>
             <groupId>org.jasypt</groupId>
