--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -74,6 +74,20 @@
             <artifactId>snappy-java</artifactId>
         </dependency>
 
+        <!-- Twitter/Chill -->
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill_${scala.main.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-bijection_${scala.main.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-java</artifactId>
+        </dependency>
+
         <!-- Fast Serialization -->
         <dependency>
             <groupId>de.ruedigermoeller</groupId>
