--- a/debop4s-experiments/pom.xml
+++ b/debop4s-experiments/pom.xml
@@ -18,6 +18,27 @@
 
     <dependencies>
 
+        <!-- Twitter/Chill -->
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill_${scala.main.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-bijection_${scala.main.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-java</artifactId>
+        </dependency>
+
+        <!-- Scala Pickling -->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-pickling_${scala.main.version}</artifactId>
+            <version>0.8.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Akka -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
