--- a/hibernate-rediscala/pom.xml
+++ b/hibernate-rediscala/pom.xml
@@ -54,7 +54,28 @@
             <artifactId>snappy-java</artifactId>
         </dependency>
 
+        <!-- Scala Pickling -->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-pickling_${scala.main.version}</artifactId>
+        </dependency>
+
+        <!-- Twitter/Chill -->
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill_${scala.main.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-bijection_${scala.main.version}</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-java</artifactId>
+        </dependency>
+
         <!-- Fast Serialization -->
+        <!-- FST has problem in Tomcat : can't deserialize Float type -->
         <dependency>
             <groupId>de.ruedigermoeller</groupId>
             <artifactId>fst</artifactId>
