--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 
         <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
 
+        <chill.version>0.3.6</chill.version>
         <infinispan.version>6.0.1.Final</infinispan.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -149,6 +150,13 @@
                 <artifactId>akka-testkit_${scala.main.version}</artifactId>
                 <version>${akka.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- Scala Pickling -->
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-pickling_${scala.main.version}</artifactId>
+                <version>0.8.0-SNAPSHOT</version>
             </dependency>
 
             <!-- Apache Commons -->
@@ -280,6 +288,23 @@
                 <groupId>de.ruedigermoeller</groupId>
                 <artifactId>fst</artifactId>
                 <version>1.52</version>
+            </dependency>
+
+            <!-- Twitter/Chill -->
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>chill_${scala.main.version}</artifactId>
+                <version>${chill.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>chill-bijection_${scala.main.version}</artifactId>
+                <version>${chill.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.twitter</groupId>
+                <artifactId>chill-java</artifactId>
+                <version>${chill.version}</version>
             </dependency>
 
             <!-- Jackson JSON Serializer -->
