--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- IntelliJ annotations -->
+        <dependency>
+            <groupId>com.intellij</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -157,6 +163,13 @@
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-pickling_${scala.main.version}</artifactId>
                 <version>0.8.0-SNAPSHOT</version>
+            </dependency>
+
+            <!-- IntelliJ annotations -->
+            <dependency>
+                <groupId>com.intellij</groupId>
+                <artifactId>annotations</artifactId>
+                <version>12.0</version>
             </dependency>
 
             <!-- Apache Commons -->
