-. GridGain 의 GridOptimizedMarsharller 를 이용해 Serializer 구현 및 벤치 마크 테스트 완료     믿기지 않을 정도로 속도가 빠르다^^

--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>chill-java</artifactId>
         </dependency>
 
+        <!-- GridGain -->
+        <dependency>
+            <groupId>org.gridgain</groupId>
+            <artifactId>gridgain-datagrid</artifactId>
+        </dependency>
+
         <!-- Fast Serialization -->
         <dependency>
             <groupId>de.ruedigermoeller</groupId>
