--- a/pom.xml
+++ b/pom.xml
@@ -528,19 +528,19 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb</artifactId>
-                <version>1.4.0.RELEASE</version>
+                <version>1.4.1.RELEASE</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-mongodb-cross-store</artifactId>
-                <version>1.4.0.RELEASE</version>
+                <version>1.4.1.RELEASE</version>
             </dependency>
 
             <!-- Spring Boot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>0.5.0.M5</version>
+                <version>1.0.0.RC5</version>
             </dependency>
 
             <!-- Spring Social -->
