-. gridgain 정식 버전에서 opensource 버전으로 변경. ( serializer 속도가 환상임 )

--- a/debop4s-data/pom.xml
+++ b/debop4s-data/pom.xml
@@ -80,11 +80,11 @@
             <artifactId>hibernate-ehcache</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-infinispan</artifactId>
-            <scope>test</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate-infinispan</artifactId>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
         <!-- Hibernate-Validator -->
         <dependency>
