--- a/debop4s-core/pom.xml
+++ b/debop4s-core/pom.xml
@@ -91,7 +91,7 @@
         <!-- GridGain -->
         <dependency>
             <groupId>org.gridgain</groupId>
-            <artifactId>gridgain-datagrid</artifactId>
+            <artifactId>gridgain-core</artifactId>
         </dependency>
 
         <!-- Fast Serialization -->
