--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,7 @@
         <querydsl.version>3.3.1</querydsl.version>
 
         <hibernate.validator.version>5.0.1.Final</hibernate.validator.version>
-
         <chill.version>0.3.6</chill.version>
-        <infinispan.version>6.0.1.Final</infinispan.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -296,11 +294,62 @@
                 <version>1.1.0.1</version>
             </dependency>
 
-            <!-- GridGain -->
+            <!-- GridGain : https://github/gridgain/gridgain 을 다운받아 빌드해야 합니다.  -->
             <dependency>
                 <groupId>org.gridgain</groupId>
-                <artifactId>gridgain-datagrid</artifactId>
-                <version>6.0.1</version>
+                <artifactId>gridgain-core</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.gridgain</groupId>
+                        <artifactId>gridgain-commons-deps</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.gridgain</groupId>
+                        <artifactId>gridgain-hadoop2-deps</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.gridgain</groupId>
+                        <artifactId>gridgain-spring-deps</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.gridgain</groupId>
+                        <artifactId>gridgain-aspectj-deps</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.gridgain</groupId>
+                        <artifactId>gridgain-jetty-deps</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.gridgain</groupId>
+                        <artifactId>gridgain-hibernate-deps</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                    <!-- jboss 에서 jboss.logging 을 사용해서 문제가 된다 -->
+                    <exclusion>
+                        <groupId>jboss</groupId>
+                        <artifactId>jboss-common</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>jboss</groupId>
+                        <artifactId>jboss-jmx</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>jboss</groupId>
+                        <artifactId>jboss-system</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>jboss-logging</artifactId>
+                        <groupId>org.jboss.logging</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- Fast Serialization -->
@@ -595,12 +644,13 @@
                 <version>${hibernate.version}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-infinispan</artifactId>
-                <version>${hibernate.version}</version>
-                <scope>test</scope>
-            </dependency>
+
+            <!--<dependency>-->
+            <!--<groupId>org.hibernate</groupId>-->
+            <!--<artifactId>hibernate-infinispan</artifactId>-->
+            <!--<version>${hibernate.version}</version>-->
+            <!--<scope>test</scope>-->
+            <!--</dependency>-->
 
 
             <!-- Hibernate-Validator -->
@@ -608,6 +658,12 @@
                 <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-validator</artifactId>
                 <version>${hibernate.validator.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>jboss-logging</artifactId>
+                        <groupId>org.jboss.logging</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- Query DSL -->
@@ -665,37 +721,6 @@
                 <artifactId>rediscala_${scala.main.version}</artifactId>
                 <version>1.3</version>
             </dependency>
-
-            <!-- Infinispan -->
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-core</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-commons</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-spring</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.infinispan</groupId>
-                <artifactId>infinispan-query-dsl</artifactId>
-                <version>${infinispan.version}</version>
-            </dependency>
-
-            <!-- "Java Concurrency in Practice" book annotations -->
-            <!-- Hint: 이게 없으면 Infinispan 에서 compile 에러가 납니다. -->
-            <dependency>
-                <groupId>net.jcip</groupId>
-                <artifactId>jcip-annotations</artifactId>
-                <version>1.0</version>
-            </dependency>
-
 
             <!-- Cassandra -->
             <dependency>
